--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,5 +1,5 @@
-jason:
-    first_name: "jason"
-    last_name: "seifer"
-    email: "jason@teamtreehouse.com"
-    profile_name: "jasonseifer"
+jasontest:
+    first_name: "jose"
+    last_name: "ortiz"
+    email: "test1@test.com"
+    profile_name: "testaccounts1"
